update repo name for website display

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wedding",
+  "homepage": "https://tai34tw.github.io/wedding/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
